@@ -3,6 +3,8 @@ Next Version
 - fixed subitem behavior of MLShow and MLAlbum on removal
 - MLTitleDecrapifier handles shows with more than 99 and less than 1000
   episodes correctly now
+- added user defaults option to disable file name display optimizations
+  when media is newly added to the library
 
 Added Public APIs:
 - MLShow:
